# py-icap-server

./: .gitignore  Dockerfile  Makefile  README.md  docker-test.sh  pyicap.py  pyproject.toml  setup.py
examples/: reqmod_copy.py  reqmod_location.py  reqmod_only_bbc.py  respmod_402.py  respmod_copy.py
