[build-system]
requires = ["setuptools >= 59.6"]
build-backend = "setuptools.build_meta"

[project]
readme = "README.md"
name = "pyicapserver"
version = "1.1.1"
requires-python = ">= 3.10"
dynamic = ["dependencies", "optional-dependencies"]
description = "A framework for writing ICAP servers"
license = {text = "BSD License"}
authors = [
    {name = "FÁBIÁN Tamás László", email = "giganetom@gmail.com"},
]
maintainers = [
  {name = "Kirill Zimnikov", email = "kirill@zimnikov.ru"}
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries'
]

[project.urls]
Repository = "https://github.com/lirik90/pyicapserver.git"
